[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ssl-sentinel"
dynamic = ["version"]
description = "A command-line tool for checking SSL/TLS certificate validity and expiration dates."
requires-python = ">=3.6"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Antelo Abelenda" },
]

[project.urls]
Homepage = "https://github.com/janoantelo7/certChecker"
Repository = "https://github.com/janoantelo7/certChecker.git"
Documentation = "https://github.com/janoantelo7/certChecker#readme"
Issues = "https://github.com/janoantelo7/certChecker/issues"

[project.scripts]
ssl-sentinel = "ssl_sentinel.main:main"

[tool.hatch.version]
path = "src/ssl_sentinel/__about__.py"
